--- a/index.qmd
+++ b/index.qmd
@@ -4,15 +4,13 @@ format: html
 editor: visual
 ---
 
-![](images/Strategy_Centered_blue_grey.png){fig-align="center"}
-
 ## Introduction {.unnumbered}
 
-This guide is intended as an information resource for prospective and current students as well as employers and others interested in learning about the Strategic Management major at BYU.
+This guide is intended as an informational resource for prospective and current students as well as employers and others interested in learning about the Strategic Management major at BYU.
 
 The Strategic Management program at BYU helps students develop the skills needed to improve organizational performance by solving complex business problems and capitalizing on new opportunities. Doing so requires both hard technical skills (e.g. coding, data analysis, financial modeling) and soft people skills (e.g. influencing others through storytelling, developing trust, and working in teams).
 
-Because of the necessity for both hard and soft skills the Strategy program seeks to attract students with high leadership potential who practice genuine curiosity, work well with others, are analytically rigorous, and driven.
+Because of the necessity for both hard and soft skills, the Strategy program seeks to attract students with high leadership potential who practice genuine curiosity, work well with others, are analytically rigorous, and driven.
 
 ## What is Strategy? {.unnumbered}
 
@@ -29,7 +27,7 @@ These are complex, ambiguous, and high-stakes questions requiring the integratio
 
 Why do we believe undergraduates at BYU are ready to study strategy when most institutions reserve it for graduate students? Simply put, BYU students are unlike any others. Many have already:
 
--   Served missions that required leadership, cross-cultural communication, and long-term planning
+-   Served volunteer missions for the Church of Jesus Christ of Latter-day Saints that required leadership, cross-cultural communication, and long-term planning
 -   Worked in meaningful jobs or started businesses
 -   Learned a second language and lived abroad
 -   Married and taken on family responsibilities
@@ -40,7 +38,7 @@ BYU students are mission-driven individuals who routinely engage with big, life-
 
 A metaphor for the kind of student that will thrive in the Strategy program is that of a CEO-Janitor.
 
-The CEO-Janitor is someone who takes ownership like a CEO by solving hard problems, making strategic decisions, and leading with vision but is also willing to roll up their sleeves like a janitor to do whatever the team needs, no task too small or beneath them. This mindset captures the kind of low-ego, high-capacity leader the Strategy program seeks to cultivate: driven, curious, collaborative, and unafraid of sometimes messy work.
+The CEO-Janitor is someone who takes ownership like a CEO by solving hard problems, making strategic decisions, and leading with vision but is also willing to roll up their sleeves like a janitor to do whatever the team needs, no task too small or beneath them. This mindset captures the kind of low-ego, high-capacity leader the Strategy program seeks to cultivate: one who is driven, curious, collaborative, and unafraid of sometimes messy work.
 
 The program is not the best fit for students who prefer highly scripted environments or are not comfortable navigating between big picture thinking and nitty gritty execution.
 
@@ -71,11 +69,11 @@ The program is not the best fit for students who prefer highly scripted environm
 
 ## What is the curriculum like? {.unnumbered}
 
-The Strategy curriculum is rigorous and covers both hard technical skills and soft people skills in order to give students the skills needed to lead, influence, and solve problems in today's technology driven world.
+The Strategy curriculum is rigorous and covers both hard technical skills and soft people skills in order to give students the ability to lead, influence, and solve problems in today's technology driven world.
 
 Through our [courses](01-courses.qmd), students will:
 
--   Learn structured problems solving
+-   Learn structured problem solving
 -   Engage in [case study based classroom discussions](https://www.hbs.edu/mba/academic-experience/the-case-method)
 -   Gather, analyze, and articulate insights from real world data using Excel, SQL, Python, and Tableau
 -   Prepare and present CEO quality slide decks containing evidence-based recommendations
@@ -83,17 +81,17 @@ Through our [courses](01-courses.qmd), students will:
 -   Learn foundational economic theory and strategy frameworks to guide their thinking
 -   Complete a [capstone experience](02-tracks.qmd) for a real company where they either:
     -   Analyze a real company's strategy and present tailored recommendations to it's leadership
-    -   Build a real physical or digital product from scratch (via [Sandbox](https://creators.byu.edu/sandbox/sandbox) or [Crocker Innovation Fellowship)](https://crockerinnovationfellows.com/), or complete a Associate Product Manger (APM) internship with a leading company.
+    -   Build a real physical or digital product from scratch (via [Sandbox](https://creators.byu.edu/sandbox/sandbox) or [Crocker Innovation Fellowship)](https://crockerinnovationfellows.com/), or complete a Associate Product Manger (APM) internship with a leading company
 
 ## What are my career options? {.unnumbered}
 
-Strategy students graduate with a strong track record of placement in management consulting, corporate strategy, and product management roles. Because of the interdisciplinary nature of the degree students also place well in a wide variety of other job types and are also well prepared for entrepreneurship. View our [careers](03-career.qmd#explore-placement-data) page for a list of roles and companies that our graduates have landed in.
+Strategy graduates have a strong track record of placement in management consulting, corporate strategy, and product management roles. Because of the interdisciplinary nature of the degree, students also place well in a wide variety of other job types and are also well prepared for entrepreneurship. View our [careers](03-career.qmd#explore-placement-data) page for a list of roles and companies that our graduates have landed in.
 
-The major consistently achieves [**100% placement**](https://byu-my.sharepoint.com/:b:/g/personal/murff_byu_edu/EVe5md0DtNhOrolfnGxg6fQB1F75peFtvGgYqT2rEkYJAg?e=J8Qt0U), with the **highest average starting salary in the Marriott School (\$83,000).**
+The major consistently achieves 100% placement, with the **highest average starting salary in the Marriott School (\$83,000).**
 
 ![](images/BYUStrategy-Placement-25.png){fig-align="center" width="85%"}
 
-For students looking to go into consulting the Strategy major continues to place **highest number of students at [McKinsey, Bain, BCG (MBB) and other top consulting firms](https://byu-my.sharepoint.com/:b:/g/personal/murff_byu_edu/EXAQsKD1LS5Pm8VckCiUU4gBE9NLnEU2Oieu1exM-GKkUA?e=BxObQe)**.
+For students looking to go into consulting, the Strategy program places the **highest number of students at McKinsey, Bain, BCG (MBB) and other top consulting firms**.
 
 ![](images/BYUStrategy-Pipeline-25){fig-align="center" width="75%"}
 
@@ -108,6 +106,7 @@ We are committed to giving our students the best education for careers in strate
 Our partnership with Management Consulted give students access to an incredibly rich set of self-serve content that supports them throughout the entire recruiting lifecycle including:
 
 **600+ Practice Cases - 10+ Firm Styles**\
+
 - 10+ Industries Represented\
 - 4 Functions Represented\
 - Each with integrated solutions\
@@ -115,11 +114,13 @@ Our partnership with Management Consulted give students access to an incredibly 
 - New cases added every month
 
 **25K+ Case Drills - Case Structure**\
+
 - Mental Math\
 - Chart/Graph/Exhibit\
 - Brainstorming
 
 **9 Video Courses - Consulting Industry Bootcamp**\
+
 - R/CL Bootcamp\
 - Networking Bootcamp\
 - Fit Interview Bootcamp\
@@ -128,7 +129,9 @@ Our partnership with Management Consulted give students access to an incredibly 
 - Business Basics Bootcamp\
 - PowerPoint Bootcamp - Excel Bootcamp
 
-**12 Industry Primers - Automotive**\
+**12 Industry Primers 
+
+- Automotive**\
 - Consumer Goods\
 - Fashion & Apparel\
 - Financial Services\
@@ -141,12 +144,16 @@ Our partnership with Management Consulted give students access to an incredibly 
 - Real Estate\
 - TMT (Technology, Media, Telecom)
 
+Access to a premium account is provided to all BYU students by the Strategy Program. You can sign up for your premium account [**here**](https://managementconsulted.com/marriott-registration/).
+
 ::: {style="text-align: center;"}
-<img src="images/leland.png" alt="Management Consulted" style="max-width: 100%; height: auto;"/>
+<img src="images/leland.png" alt="Leland" style="max-width: 100%; height: auto;"/>
 :::
 
 Leland is an online coaching platform that helps match individuals with people have "been there, done that" (i.e. worked at the companies you want to work for) enabling highly tailored and relevant support.
 
-Strategy student who recieve an interview offer from a top company for which Leland has a coach are provided with a 45 minute mock interview/coaching session with an employee or alumni from the target company. This is a unique student benefit, currently only offered by the Strategy program.
+Strategy students who recieve an interview offer from a top company for which Leland has a coach are provided with a 45 minute mock interview/coaching session with an employee or alumni from the target company. This is a unique student benefit, currently only offered by the Strategy program.
+
+If you receive an interview offer and would like to request a coaching session/mock interview with a Leland coach fill out this short [**form**](https://forms.office.com/Pages/ResponsePage.aspx?id=m278xvtRqEi3eZ7lZLQEE45FG9mNzyFEuhLo8BIWgNpUQVc0SFlEWDRJRU5QRkE2UUdFU1pUTzJKWi4u).
 
 
