--- a/02-tracks.qmd
+++ b/02-tracks.qmd
@@ -5,34 +5,62 @@ editor: visual
 
 ## Business Analyst Track {.unnumbered}
 
-New students entering the program are part of Business Analyst track by default and a separate application is not required. As part of this track, students will partner with a company to address real strategic issues, gaining hands-on experience and client management skills. This is done Fall or Winter semester of senior year by enrolling in STRAT: 421 Strategy Implementation.
+New students entering the program are initially part of Business Analyst track. 
 
-## Product Management Track {.unnumbered}
+During their senior year, students on the Business Analyst track will partner with a company to address real strategic issues as part of the Cougar Strategy Group, gaining hands-on experience and client management skills. Students complete this experience Fall or Winter semester of their senior year by enrolling in STRAT: 421 Strategy Implementation.
 
-Students may opt-in to the Product Management track by completing 1 of 3 possible product management experiences, each of which has its own application process and timeline.
+As an alternative, students may opt into the Product track after taking the necessary prerequisites and discussing with the program director. 
 
-The Associate Product Manager (APM) Internship experience is administered by the Strategy program.
+## Product Track {.unnumbered}
 
-Sandbox and the Crocker Innovation Fellowship are administered by the Entrepreneurship program.
+Students who join the Product track complete 1 of 4 experiential learning experiences:
 
-Students earn a varying number of credits for each capstone experience which are described below.
+1. Associate Product Manager (APM) Internship: Students complete a 4-month product focused internship (unpaid) starting Winter of their junior year.
+2. Associate Product Builder (APB) Fellowship: Students build and deliver to market a pre-validated product concept from the Strategy Foundry, starting Winter of their junior year.
+3. Sandbox: Students build and launch a digital product from scratch starting in the summer after their junior year.
+4. Crocker Innovation Fellowship: Students design and build a physical product from scratch starting Winter of their junior year.
 
-### Associate Product Manager (APM) Internship (3.0-7.0 credits) {.unnumbered}
+The Associate Product Manager (APM) Internship and the Associate Product Builder (APB) Fellowship are administered by the Strategy program. About 10-15 Strategy students participate in each experience each year.
 
-Students will complete a guaranteed four month APM Internship with a leading company. The internship may extend and convert to paid after 4 months depending on negotiations between the company and the student.
+Sandbox and the Crocker Innovation Fellowship are administered by the Entrepreneurship program and are subject to their own applications. Typically 5-10 Strategy students are admitted to Sandbox while 1-2 students are admitted to the Crocker Innovation Fellowship each year.
 
-**Students interested in applying should enroll during the Fall of their Junior Year in one of:**
+In total, 30-40 Strategy students typically join the Product track through 1 of these 4 experiences.
 
--   STRAT 490R: Creating Digital Products with AI: Strategy & Prototyping (3.0 credits)
+### Associate Product Manager (APM) Internship {.unnumbered}
+
+Students complete a 4-month product focused internship (unpaid) starting Winter of their junior year. Students work a minimum of 10 hours per week. Work may be in person or remote depending on the location and preferences of the company. Companies may offer to pay students for hours beyond 10 per week during the Winter semester. Any such paid arrangement is negotiated directly between the student and the company, however host companies have been informed this is an option they can discuss with you. Students should generally not work more than 20 hours per week to ensure they can give their other Junior Core classes proper attention.
+
+The internship may extend into summer and convert to paid depending on negotiations between the company and the student.
+
+**Students interested in being considered should enroll during Fall of their junior in both:**
+
 -   MSB 341: Product Management (3.0 credits)
-
-AND
-
 -   MSB 342: Product Management Lecture Series (1.0 credit)
+
+Mid-way through Fall semester, interested students will interview with both a faculty member and prospective companies and may be invited to join the track. Joining the track is not guaranteed and is dependent on performance in the MSB 341/342, the number of available internship slots, and company preferences.
 
 ![](images/2025-strategy-pm-track-flyer.png){fig-align="center" width="75%"}
 
-### Sandbox (17.0 credits) {.unnumbered}
+### Associate Product Builder (APB) Fellowship {.unnumbered}
+
+The Associate Product Builder (APB) Fellowship is a 12-month experiential learning experience where students build and deliver to market a pre-validated product concept from the Strategy Foundry and seek to earn real revenue, starting Winter of their junior year. The experience is partly modeled after LinkedIn's first-ever [Associate Product Builder (APB) program](https://careers.linkedin.com/pathways-programs/entry-level/apb). 
+
+"We are entering a new era of building. And the full-stack builder archetype is arising with it. A full-stack builder is capable of developing experiences, combining skills & expertise, across traditionally distinct domains (e.g. design, product management, technology, business strategy)."
+
+Tomer Cohen, Chief Product Officer at LinkedIn
+
+- Teams of 3-5 students work on the business a minimum of 10 hours per week during the Winter Semester, full-time over the Spring and Summer, and part-time again (10-20 hours) in the Fall Semester of their senior year. 
+- Participating students receive a stipend to cover their tuition during the Spring and Summer terms. Students with additional financial needs should speak with the program director.
+- Students receive a loan of between $1,000 and $5,000 to seed their business. Loans should be repaid by revenue generated over the following 12 months with a market interest rate. Re-paid dollars go back into the pool to fund future businesses and create a reserve. After the loan is repaid in full, students split any additional revenue after costs equally or may choose to reinvest it in the company. There is no credit impact to student's credit profile if unpaid, however, effort towards loan repayment is considered as part of course grading.
+- At the completion of the 12-month experience, students wanting to continue working on the company who have repaid their loan can mutually agree on equity positions and take the company forward. 
+- If students don't desire to take the company forward, the idea and IP goes back to the Foundry or is wound down.
+
+**Students interested in being considered should enroll during Fall of their junior in both:**
+
+-   STRAT 490R - Creating Digital Products with AI: Strategy & Prototyping
+-   MSB 342: Product Management Lecture Series (1.0 credit)
+
+### Sandbox {.unnumbered}
 
 [Sandbox](https://creators.byu.edu/sandbox/sandbox) students spend two semesters working in a small team to build and launch launch a software tech business from scratch—one of the best experiences those interested in tech entrepreneurship or product management can get in school.
 
@@ -42,10 +70,14 @@ Applications for Sandbox are completed during Winter Semester.
 
 [Follow on LinkedIn](https://www.linkedin.com/company/sandboxeducation/posts/?feedView=all)
 
+There are no formal pre-reqs.
+
 ### Crocker Innovation Fellowship (6.0 credits) {.unnumbered}
 
 The [Crocker Innovation Fellowship](https://crockerinnovationfellows.com/) is an interdisciplinary innovation program that runs from January to December each year. Students study and practice principles of innovation in Winter semester, learn through a summer internship, and then study and practice principles of innovation commercialization in the Fall semester. Interested students from all majors are encouraged to apply.
 
 Applications for the 2026 class will open Fall 2025.
 
-Email us at crockerfellows\@gmail.com with any questions.
+Email crockerfellows\@gmail.com with any questions.
+
+There are no formal pre-reqs.
